--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Website</title>
     <link rel="stylesheet" href="/Login/cssapp/reset.css">
     <link rel="stylesheet" href="/style/style.css">
     <script src="https://kit.fontawesome.com/f464ed5cf0.js" crossorigin="anonymous"></script>
